# AIL

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.ko.md  CONTRIBUTING.md  ONBOARDING.md  README.ai.md  README.md  ROADMAP.md
.claude/: settings.json
.claude/hooks/: stoa_inbox_check.sh
.githooks/: commit-msg  pre-commit  pre-push
.github/workflows/: conformance.yml  rust-release.yml  rust.yml
agents/tekton/: README.md  charter.ail  outbox_dispatch.py  stoa_send.ail  stoa_send_canonical_driver.ail  tekton.yaml
community-tools/: README.md  discord_gateway.ail  inbox_processor.ail  launch-team-vscode.sh  launch-team.sh  onboard.sh  stoa_audit.ail  stoa_notify.sh  stoa_receiver.ail  stoa_register.ail  stoa_thread.ail  stoa_wake_monitor.sh  universal_agent.ail
community-tools/stoa-cli/: __init__.py  __main__.py  stoa_cli.py
docs/: PRINCIPLES.md  heaal-vs-claude-code.md
docs/auth/: agent-vs-human.md
docs/ko/: README.ko.md
docs/proposals/: ail-up-ux.md  budget.md  builtins-canonical.md  diag-effects.md  effect-conformance.md  executor-split.md  pure-ail-agent-demo.md
examples/agents/: 01_echo.ail  02_counter.ail  03_clock.ail  04_inbox_queue.ail  05_thinking_agent.ail  README.md
mneme/: .gitignore  Procfile  README.md  nixpacks.toml  requirements.txt  server.ail
reference-impl/: pyproject.toml
reference-impl/ail/: __init__.py  bundle.py  cli.py  doctor.py  reference_card.md  stoa.py
reference-impl/ail/agentic/: __init__.py  agent.py  authoring_chat.py  authoring_ui.py  home_ui.py  intent_md.py  process_manager.py  project.py  scheduler.py  server.py
reference-impl/ail/parser/: ast.py  parser.py
reference-impl/ail/runtime/: anthropic_adapter.py  executor.py  executor_utils.py  queue_engine.py  trace.py
reference-impl/ail/runtime/executor_effects/: __init__.py  clock.py
reference-impl/ail/stdlib/: agent.ail  core.ail
reference-impl/examples/: summarize_and_classify.ail  translate.ail
reference-impl/tests/: test_agentic_intent_md.py  test_agentic_project.py  test_anthropic_oauth.py  test_api_key_setup.py  test_authoring_chat.py  test_authoring_prompt_structure.py  test_budget.py  test_bundle.py  test_crypto_ed25519.py  test_crypto_password.py  test_db_effects.py  test_deny_first.py  test_diag.py  test_diag_native.py  test_doctor.py  test_evolve_effects.py  test_evolve_server_race.py  test_evolve_server_return.py  test_executor.py  test_gen_effects.py  test_gh_effects.py  test_git_effects.py  test_home_ui.py  test_human_approve.py  test_human_approve_stoa.py  test_human_confirmation_result_error.py  test_image_embed.py  test_imports.py  test_lifecycle_hooks.py  test_mneme_effects.py  test_on_compact.py  test_on_letter.py  test_parser.py  test_perform_as_expression.py  test_purity_indirect.py  test_queue_engine.py  test_schedule_effect.py  test_search_web.py  test_state_effect.py  test_stoa_send_canonical.py  (+5 more)
reference-impl/tests/conformance/cases/: 019_crypto_sign_ed25519.ail  019_crypto_sign_ed25519.expected  020_crypto_verify_ed25519_pass.ail  021_crypto_verify_ed25519_tamper.ail  022_crypto_random_bytes_length.ail  022_crypto_random_bytes_length.skip-go  022_crypto_random_bytes_length.skip-rust
reference-impl/tools/: gen_effects.py
rust-impl/: Cargo.toml  README.md  install.sh
rust-impl/examples/: 01_hello.ail  02_arithmetic.ail  03_list.ail  04_result_attempt.ail  05_pipeline.ail  06_string_ops.ail  07_unwrap_chain.ail  08_fib.ail  09_negatives.ail  10_membership.ail  11_intent_demo.ail  README.md
rust-impl/src/: anthropic.rs  ast.rs  eval.rs  json_parsing.rs  lexer.rs  lib.rs  main.rs  ollama.rs  parser.rs  value.rs
rust-impl/tests/: eval.rs  lexer.rs  parser.rs
spec/: 02-context.md  04-evolution.md  05-effects.md  06-stdlib.md  08-reference-card.ai.md  builtins.canonical.yaml  effects.canonical.yaml
stoa/: README.md  nixpacks.toml  requirements.txt  server.ail
stoa-mcp/: README.md  requirements.txt  server.py
team/arche/: Bonds.md  Identity.md  Memo.md  Will.md
tests/conformance/: README.md  run.sh
