[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# Distribution name on PyPI. The name `ailang` was rejected by PyPI's
# typosquat-prevention similarity check (too close to `ai-lang`), and
# `ail` is held by an unrelated 2014 package. `ail-interpreter` is
# honest — this wheel is the Python interpreter of AIL, not the
# language itself; the canonical spec lives in spec/ and the Go
# runtime lives in go-impl/. Import name and CLI both remain `ail`.
name = "ail-interpreter"
version = "1.60.11"
description = "AIL — Python interpreter for the AI-Intent Language. fn (pure) + intent (LLM) declarations, provenance, purity contracts, confidence-aware match, calibration"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "AIL Project Contributors" }
]
keywords = [
    "ail", "ai-intent-language", "ai-language", "intent", "llm",
    "language", "interpreter", "programming-language",
    "confidence", "provenance", "calibration",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Interpreters",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
anthropic = ["anthropic>=0.34"]
dev = ["pytest>=7.0"]
all = ["anthropic>=0.34"]

[project.scripts]
ail = "ail.cli:main"

[project.urls]
Homepage = "https://github.com/hyun06000/AIL"
Repository = "https://github.com/hyun06000/AIL"
Documentation = "https://github.com/hyun06000/AIL/blob/main/spec/08-reference-card.ai.md"
Changelog = "https://github.com/hyun06000/AIL/blob/main/CHANGELOG.md"
Issues = "https://github.com/hyun06000/AIL/issues"

[tool.setuptools.packages.find]
where = ["."]
# Include only the `ail` package and its subpackages. The wildcard
# `ail*` would also pick up a stray `ail_mvp/` folder left on a
# contributor's disk from the v1.8 rename, which then lands in the
# wheel and gets installed into site-packages as a second copy —
# confusing at best, source of silent-stale-import bugs at worst.
include = ["ail", "ail.*"]
exclude = ["ail_mvp*", "tests*", "tools*"]

[tool.setuptools.package-data]
# Ship the AIL-authored stdlib with the wheel so `import summarize from
# "stdlib/language"` works for users who installed via pip.
"ail.stdlib" = ["*.ail"]
# Ship the language reference card with the wheel so `ail ask`'s
# authoring prompt has the full spec available on pip installs.
# Kept in sync with the canonical spec/08-reference-card.ai.md by
# tests/test_spec_bundled.py and the RELEASING.md pre-build step.
"ail" = ["reference_card.md"]
